k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-lab
  labels:
    app.kubernetes.io/part-of: ecommerce-lab
